fix header and card top spacing at earlier screen size

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -12,7 +12,7 @@
   padding: 0;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 633px) {
   .cards {
     margin-top: 36px;
   }
